# django-cheat-sheet

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
developing/: index.html
developing/design_patterns/design_patterns/: index.html
developing/git/best-practices-for-git-commits/: index.html
developing/git/commit-message-structure/: index.html
developing/git/generate-commit-message-with-ai-assistant/: index.html
developing/solid_principles/solid_principles/: index.html
developing/solid_principles/srp/: index.html
django/: index.html
django/models/: index.html
django/testing/reduce-test-time/: index.html
docs/: index.md
docs/developing/: index.md
docs/developing/git/: best-practices-for-git-commits.md  commit-message-structure.md  generate-commit-message-with-ai-assistant.md
docs/django/: models.md
docs/django/testing/: reduce-test-time.md
docs/python/: index.md  namespaces-and-scope.md
docs/python/classes/: classes-and-objects.md  object-oriented-programming.md
docs/python/syntax/: python-syntax.md
python/: index.html
python/classes/classes-and-objects/: index.html
python/classes/object-oriented-programming/: index.html
python/namespaces-and-scope/: index.html
python/syntax/python-syntax/: index.html
search/: search_index.json
