[tool.poetry]
name = "python-monster"
version = "0.1.0"
description = ""
authors = ["AminZamani <aminzamani.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs-material = "^9.5.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
